# StereoVista

./: .gitignore  Building a Dynamic 3D Mouse Cursor for Point Cloud Editing.docx  CLAUDE.md  README.md  README.txt  StereoVista.sln
OpenGLTemplate/: OpenGLTemplate.vcxproj  OpenGLTemplate.vcxproj.filters  cursor_presets.json  imgui.ini  preferences.json  scene.json
OpenGLTemplate/assets/shaders/: fragmentShader.glsl  simpleDepthFragmentShader.glsl  skyboxFragmentShader.glsl  skyboxVertexShader.glsl  sphereFragmentShader.glsl  sphereVertexShader.glsl  vertexShader.glsl  voxelDebugFragment.glsl  voxelFragmentShader.glsl  voxelGeometryShader.glsl  voxelVertexShader.glsl  voxel_cube.frag  voxel_cube.vert  voxel_visualization.frag  voxelization.frag  voxelization.geom  voxelization.vert
OpenGLTemplate/headers/: Camera.h  Cursor.h  CursorManager.h  FragmentCursor.h  GUI.h  GUI_Types.h  PlaneCursor.h  SphereCursor.h  core.h  cursor_presets.h  laz_converter.h  model_loader.h  obj_loader.h  octree.h  point_cloud_loader.h  scene_manager.h  voxalizer.h
OpenGLTemplate/headers/Core/: SceneManager.h  Voxalizer.h
OpenGLTemplate/headers/Engine/: Core.h
OpenGLTemplate/headers/Gui/: GuiTypes.h
OpenGLTemplate/headers/Loaders/: ModelLoader.h  PointCloudLoader.h
OpenGLTemplate/headers/engine/: buffers.h  data.h  input.h  shader.h  window.h
OpenGLTemplate/headers/libs/: openLinks.h  portable-file-dialogs.h
OpenGLTemplate/src/: Cursor.cpp  CursorManager.cpp  FragmentCursor.cpp  GUI.cpp  PlaneCursor.cpp  SphereCursor.cpp  cursor_presets.cpp  main.cpp  model_loader.cpp  obj_loader.cpp  obj_loader.h  point_cloud_loader.cpp  scene_manager.cpp  scene_manager.h  stb_image_impl.cpp  voxalizer.cpp
OpenGLTemplate/src/Core/: SceneManager.cpp  Voxalizer.cpp
OpenGLTemplate/src/Cursors/: CursorPresets.cpp
OpenGLTemplate/src/Gui/: GUI.cpp
OpenGLTemplate/src/Loaders/: ModelLoader.cpp
OpenGLTemplate/src/engine/: buffers.cpp  input.cpp  shader.cpp
OpenGLTemplate/src/imgui/: imgui_incl.h
OpenGLTemplate/x64/Debug/: OpenGLTemplate.exe.recipe  Stereo Demo.exe.recipe  esp4BC0.tmp  vc143.idb
StereoVista/: StereoVista.vcxproj  StereoVista.vcxproj.filters  imgui.ini
StereoVista/3DConnexions SDK files/: TDxWare_SDKConfigVersion.cmake  readme.txt
StereoVista/3DConnexions SDK files/doc/: TDx.SpaceMouse.Navigation3D.chm  navlib.xml
StereoVista/3DConnexions SDK files/inc/: 3DxWareVersionNumbers.h  V3DCMD.h
StereoVista/3DConnexions SDK files/samples/3DxTraceNL/: 3DxTraceNL.chm  3DxTraceNL.sln  CMakeLists.txt  readme.md
StereoVista/3DConnexions SDK files/samples/3DxTraceNL/3DxTraceNL/: 3DxTraceNL.cpp  3DxTraceNL.vcxproj  3DxTraceNL.vcxproj.filters  CApplication3D.cpp  CApplication3D.hpp  CNavigationModel.cpp  CViewportViewModel.cpp
StereoVista/3DConnexions SDK files/samples/navlib_viewer/: CMakeLists.txt  Navlib_Viewer.chm  navlib_viewer.sln  readme.md
StereoVista/3DConnexions SDK files/samples/navlib_viewer/src/: 3dxware sdk.props  CMakeLists.txt  GeomObj.cpp  GeomObj.h  Matrix3d.cpp  Matrix3d.h  Visitor.cpp  Visitor.h  capplicationcommand.cpp  capplicationcommand.hpp  mainfrm.cpp  mainfrm.h  mcaddoc.cpp  mcaddoc.h  mcadview.cpp  mcadview.h  navlib_viewer.cpp  navlib_viewer.h  navlib_viewer.rc  navlib_viewer.vcxproj  navlib_viewer.vcxproj.filters  resource.h  stdafx.cpp  stdafx.h  version.h
StereoVista/3DConnexions SDK files/samples/navlib_viewer/src/res/: navlib_viewer.rc2  version.rc2
StereoVista/3DConnexions SDK files/web/: readme_web.txt
StereoVista/assets/shaders/: simpleDepthFragmentShader.glsl  vertexShader.glsl  voxel_cube.frag  voxel_cube.vert  voxelization.vert
StereoVista/headers/Core/: Camera.h  SceneManager.h  Voxalizer.h
StereoVista/headers/Cursors/: CursorPresets.h
StereoVista/headers/Engine/: BVH.h  BVHDebug.h  Core.h  Data.h  Input.h  OctreePointCloudManager.h  SpaceMouseInput.h  Window.h  shader.h
StereoVista/headers/Gui/: Gui.h  GuiTypes.h
StereoVista/headers/Loaders/: ModelLoader.h  PointCloudLoader.h
StereoVista/src/: main.cpp
StereoVista/src/Core/: SceneManager.cpp  Voxalizer.cpp
StereoVista/src/Engine/: BVH.cpp  BVHDebug.cpp  Input.cpp  OctreePointCloudManager.cpp  Shader.cpp  SpaceMouseInput.cpp  Window.cpp
StereoVista/src/Gui/: GUI.cpp
StereoVista/src/Loaders/: ModelLoader.cpp  PointCloudLoader.cpp
StereoVista/x64/Debug/: StereoVista.exe.recipe  vc143.idb
StereoVista/x64/Release/: StereoVista.exe.recipe
dependencies/lib/debug/: hdf5.lib  hdf5_cpp.lib  hdf5_hl.lib  hdf5_tools.lib  libaec.lib  libhdf5_hl_cpp.lib  libszaec.lib
dependencies/lib/release/: hdf5_hl_cpp.lib  hdf5_java.lib  (+3 more)
(+204 files in other folders)
